--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,37 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  <button md-icon-button [mdMenuTriggerFor]="menu">
+    <md-icon>more_vert</md-icon>
+  </button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item>
+      <md-icon>dialpad</md-icon>
+      <span>Redial</span>
+    </button>
+    <button md-menu-item disabled>
+      <md-icon>voicemail</md-icon>
+      <span>Check voicemail</span>
+    </button>
+    <button md-menu-item>
+      <md-icon>notifications_off</md-icon>
+      <span>Disable alerts</span>
+    </button>
+  </md-menu>
+
+  <h2 class="app-title">Chromic</h2>
+</md-toolbar>
+<md-sidenav-container>
+  <md-sidenav #sidenav mode="side" class="app-sidenav">
+    Sidenav
+  </md-sidenav>
+  <div>
+    <md-list>
+      <h3 md-subheader>收藏</h3>
+      <md-list-item>
+        <md-icon md-list-avatar>collections_bookmark</md-icon>
+        <h4 md-line>title</h4>
+        <p md-line>subtitle</p>
+      </md-list-item>
+      <md-divider></md-divider>
+    </md-list>
+  </div>
+</md-sidenav-container>
